# Cyber-Engine

./: .gitignore  CMakeLists.txt  README.md  doc.odg
Boxel/: Boxel.cpp  Boxel.hpp  main.cpp
EngineExample/: Application.cpp  Application.hpp  Arg.cpp  Arg.hpp  BasicScene.hpp  main.cpp
EngineExample/BoxelScene/: BoxelCamera.cpp  BoxelCamera.hpp  BoxelPlayer.cpp  BoxelPlayer.hpp  BoxelScene.cpp  BoxelScene.hpp
Game/: run-game.sh
Games/: Tetris
Match/: Match.cpp
MyQuake/: Console.cpp  Console.hpp  Draw.cpp  Draw.hpp  Engine.cpp  Engine.hpp  Game.cpp  Game.hpp  Rect.hpp  System.cpp  system.hpp  video.cpp  video.hpp
Tetris/: Board.cpp  Board.hpp  Player.hpp  Tetris.hpp  Tetromino.cpp  Tetromino.hpp  test.cpp  tetris.cpp
VisualStudio/: CyberEngine.sln  CyberEngine.vcxproj  CyberEngine.vcxproj.filters
Voxel/: Image.cpp  Image.hpp  Noise.cpp  Noise.hpp  Voxel.cpp  VoxelCamera.cpp  VoxelCamera.hpp  VoxelRenderer.cpp  VoxelRenderer.hpp  VoxelScene.cpp  VoxelScene.hpp  VoxelWindow.cpp  VoxelWindow.hpp
cmake/: FindGLM.cmake
data/: .directory  dirt.dds  grass.dds  stone.dds
data/byNobiax/pattern_391/: diffuse.dds
data/match/: dark.dds
data/shaders/: basic.frag  basic.vert  noLight.frag  noLight.vert
include/: CyberEngine.hpp  Graphics.hpp  Key.hpp  Math.hpp  Renderer.hpp  filesystem.hpp
include/BoxelScene/: BoxelCamera.hpp  BoxelScene.hpp
include/CyberEngine/: Graphics.hpp  Scene.hpp  filesystem.hpp
src/: .directory  CyberEngine.cpp  Entity.cpp  Entity.hpp  Graphics.cpp  Modules.hpp  Montagne.cpp  Montagne.hpp  Renderer.cpp  SceneBase.cpp  SceneBase.hpp  SceneTest2.cpp  SceneTest2.hpp  System.cpp  System.hpp  Test1.cpp  Timer.cpp  Voxel.hpp  Window.cpp  filesystem.cpp  glad.c  main.cpp
src/BoxelScene/: BoxelCamera.cpp  BoxelCamera.hpp  BoxelChunk.hpp  BoxelChunkGrid.hpp  BoxelChunkMesh.hpp  BoxelPlayer.cpp  BoxelScene.cpp  BoxelScene.hpp  BoxelType.hpp
src/Core/: Array2D.hpp  Color.hpp  Error.cpp  Error.hpp  Event.hpp  FileSystem.cpp  FilesSystem.hpp  Modules.cpp  Noise.cpp  Noise.hpp  PoolAllocator.hpp  RNG.cpp  RNG.hpp  Types.hpp
src/Math/: Angle2.hpp  Angle3.hpp  MathUtils.hpp  Matrix3.hp  Matrix4.hpp  Quaternion.hpp  Rect.hpp  Resizable.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
src/PlatformIndependenceLayer/: FileSystem.cpp  FilesSystem.hpp  GraphicsWrapper.cpp  GraphicsWrapper.hpp  Timer.hpp
src/Renderer/: .directory  BasicCamera.cpp  BasicCamera.hpp  Camera.cpp  Camera.hpp  CubeData.hpp  GLDebug.cpp  GLDebug.hpp  Mesh.cpp  Mesh.hpp  MeshData.cpp  MeshData.hpp  Renderer.cpp  Renderer.hpp
src/Resources/: Resources.cpp  Resources.hpp
src/glad/: glad.c  glad.h
test/: test.cpp
